--- a/pug/article.pug
+++ b/pug/article.pug
@@ -173,5 +173,5 @@ block content
                                         div(class="articles__item-info") 7 мин
                                 div(class="articles__tags") #как устроено производство #микролоты #ценообразование #фермы #выращивание кофе
             div(class="page-pagination _flex")
-                a(href="/", class="page-pagination__btn") Загрузить больше &amp
+                a(href="/", class="page-pagination__btn") Загрузить больше
     
