--- a/sass/update_09.02.24.sass
+++ b/sass/update_09.02.24.sass
@@ -170,6 +170,13 @@ section.article
         +screen(s)
             padding: 30px 20px
 
+    img
+        max-width: 100%
+        height: auto !important
+
+    iframe
+        max-width: 100%
+        height: auto !important
 
     img[align=right]
         padding-left: 30px
