--- a/pug/_template.pug
+++ b/pug/_template.pug
@@ -24,6 +24,7 @@ html(lang="en")
         link(rel="stylesheet", href="css/swiper-bundle.min.css")
         link(rel="stylesheet", href="css/styles.css")
         link(rel="stylesheet", href="css/update_09.02.24.css")
+        link(rel="stylesheet", href="css/gift.css")
 
         script(defer, src="js/jquery-3.5.0.min.js")
         script(defer, src="js/swiper-bundle.min.js")
